@@ -2616,7 +2616,7 @@ License (GPL).</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Version 1.0.3<br />
+Version 1.0.4-dev<br />
 Last updated 2016-09-17 10:08:00 CEST
 </div>
 </div>
